- Updated the page and added a screenshot button.
- Fixed the deploy command.

SCP relied on a vulnerability: https://superuser.com/a/1403506

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
       <h2 class="subtitle shadow">.N⁶⁴ is a cross-platform emulator in the works.</h2>
       <a class="button" href="/git/Nabile/DotN64">Source</a>
       <a class="button" href="docs">Documentation</a>
+      <a class="button" href="docs/Screenshots">Screenshots</a>
       <a class="button" href="Download/DotN64.Desktop.zip">Download</a>
     </header>
     <section class="page-content">
